<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="bg.valetudo.mobile.ui.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/joke"
            android:textColor="@color/clear_water"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="221dp"
            android:src="@drawable/thank_you">

        </ImageView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_bg"
            android:hint="@string/email_address"
            android:textColor="@color/clear_water"
            android:inputType="text"
            android:padding="16dp"
            android:text="@={viewModel.userObservable.email}"
            android:textColorHint="@color/clear_water" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_bg"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/clear_water"
            android:padding="16dp"
            android:text="@={viewModel.userObservable.username}"
            android:textColorHint="@color/clear_water" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/clear_water"
            android:padding="16dp"
            android:text="@={viewModel.userObservable.password}"
            android:textColorHint="@color/clear_water"
            app:passwordToggleEnabled="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_bg"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="@color/clear_water"
            android:padding="16dp"
            android:text="@={viewModel.userObservable.confirmPassword}"
            android:textColorHint="@color/clear_water"
            app:passwordToggleEnabled="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#177DB46C"
            android:padding="16dp"
            android:text="@string/get_started"
            android:onClick="@{() -> viewModel.onSignUpClick()}"
            android:textColor="@color/clear_water"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:onClick="@{() -> viewModel.onLogInClick()}"
            android:text="@string/back_to_login"
            android:textColor="@color/clear_water" />

    </LinearLayout>
</layout>